<resources>
    <string name="app_name">bookncut</string>
    <string name="title_activity_main_cliente">MainClienteActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Administrador</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar Sesión</string>

    <string name="menu_home">Citas</string>
    <string name="menu_servicios">Servicios</string>
    <string name="menu_productos">Productos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nombre</string>
    <string name="editar_producto">Editar producto</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="precio">Precio</string>
    <string name="tipo_de_producto">Tipo de producto</string>
    <string name="modificar">Modificar</string>
    <string name="borrar">Borrar</string>
    <string name="editar_cita">Editar Cita</string>
    <string name="dia">Dia</string>
    <string name="hora">Hora</string>
    <string name="servicio">Servicio</string>
    <string name="nombre_del_cliente">Nombre del cliente</string>
    <string name="usuario">Usuario</string>
    <string name="finalizar">Finalizar</string>
    <string name="cancelar_cita">Cancelar cita</string>
    <string name="direccion">Direccion</string>
    <string name="horario">Horario</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sabado</string>
    <string name="volver">Volver</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario_nuevo">¿Usuario Nuevo?</string>
    <string name="registrate">Registrate</string>
    <string name="escoge_una_peluqueria">Escoge una peluqueria</string>
    <string name="citas">Citas</string>
    <string name="productos">Productos</string>
    <string name="guardar">Guardar</string>
    <string name="asignar_a_usuario">Asignar a usuario</string>
    <string name="nombre_del_servicio">Nombre del servicio</string>
    <string name="propietario">Propietario</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="crear">Crear</string>
    <string name="nueva_cita">Nueva Cita</string>
</resources>