<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ITTDAM.bookncut.adminPeluqueria.citas.CitasFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_citas" />

    <fragment
        android:id="@+id/nav_servicios"
        android:name="com.ITTDAM.bookncut.adminPeluqueria.servicios.ServiciosFragment"
        android:label="@string/menu_servicios"
        tools:layout="@layout/fragment_servicios" />

    <fragment
        android:id="@+id/nav_productos"
        android:name="com.ITTDAM.bookncut.adminPeluqueria.productos.ProductosFragment"
        android:label="@string/menu_productos"
        tools:layout="@layout/fragment_productos" />
</navigation>