<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulPers"
    tools:context=".root.NewPeluRootActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:fontFamily="@font/poppins"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/amarilloPers"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/txtVNombrePeluqueria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:fontFamily="@font/poppins"
                android:background="@drawable/customborder"
                android:backgroundTint="@color/white"
                android:backgroundTintMode="add"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/azulOpacoPers" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/direccion"
                android:fontFamily="@font/poppins"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/amarilloPers"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/txtVDireccionPeluqueria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:fontFamily="@font/poppins"
                android:background="@drawable/customborder"
                android:backgroundTint="@color/white"
                android:textColor="@color/azulOpacoPers" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/horario"
                android:fontFamily="@font/poppins"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/amarilloPers"
                android:textSize="24sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10sp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cbLunes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lunes"
                        android:textColor="@color/amarilloPers" />

                    <CheckBox
                        android:id="@+id/cbMartes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/martes"
                        android:textColor="@color/amarilloPers" />

                    <CheckBox
                        android:id="@+id/cbMiercoles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/miercoles"
                        android:textColor="@color/amarilloPers" />

                    <CheckBox
                        android:id="@+id/cbJueves"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jueves"
                        android:textColor="@color/amarilloPers" />

                    <CheckBox
                        android:id="@+id/cbViernes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/viernes"
                        android:textColor="@color/amarilloPers" />

                    <CheckBox
                        android:id="@+id/cbSabado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sabado"
                        android:textColor="@color/amarilloPers" />

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/amarilloPers"
                android:fontFamily="@font/poppins"
                android:textSize="24sp"
                android:text="@string/propietario" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/nombre"
                android:fontFamily="@font/poppins"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/amarilloPers"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/txtVNombrePropietarioPeluqueria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@drawable/customborder"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/azulOpacoPers" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/apellidos"
                android:fontFamily="@font/poppins"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/amarilloPers"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/txtVApellidosPropietarioPeluqueria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@drawable/customborder"
                android:backgroundTint="@color/white"
                android:backgroundTintMode="add"
                android:fontFamily="@font/poppins"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/azulOpacoPers" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/telefono"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:fontFamily="@font/poppins"
                android:textColor="@color/amarilloPers"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/txtVTelefonoPropietarioPeluqueria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@drawable/customborder"
                android:fontFamily="@font/poppins"
                android:backgroundTint="@color/white"
                android:backgroundTintMode="add"
                android:ems="10"
                android:inputType="date"
                android:textColor="@color/azulOpacoPers" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/email"
                android:fontFamily="@font/poppins"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/amarilloPers"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/txtVEmailPropietarioPeluqueria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@drawable/customborder"
                android:fontFamily="@font/poppins"
                android:backgroundTint="@color/white"
                android:backgroundTintMode="add"
                android:ems="10"
                android:inputType="textWebEmailAddress|textEmailAddress"
                android:textColor="@color/azulOpacoPers" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/contrase_a"
                android:fontFamily="@font/poppins"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/amarilloPers"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/txtVContraseñaPeluqueria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@drawable/customborder"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins"
                android:backgroundTintMode="add"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/azulOpacoPers" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@drawable/customborder"
                app:backgroundTint="@color/white"
                app:backgroundTintMode="add"
                android:onClick="crearPeluqueria"
                android:text="@string/crear"
                android:textColor="@color/azulOpacoPers" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>