<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulPers"
    tools:context=".adminPeluqueria.citas.EditCitaPeluqueriaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarAjustes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azulPers">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAjustes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/btnVolver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/azulPers"
                        android:tint="@color/white"
                        app:srcCompat="@drawable/ic_volver" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@color/azulPers"
            android:orientation="vertical">

            <customfonts.MyTextView_Poppins_Regular
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/editar_cita"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/amarilloPers"
                android:textSize="24sp" />

            <customfonts.MyTextView_Poppins_Regular
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="10dp"
                android:text="@string/dia"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/amarilloPers"
                android:textSize="20sp" />

            <customfonts.EditText_Poppins_Regular
                android:id="@+id/txtVDiaEditCitaPeluqueria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/customborder"
                android:backgroundTint="@color/white"
                android:backgroundTintMode="add"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:inputType="date"
                android:textColor="@color/azulOpacoPers" />

            <customfonts.MyTextView_Poppins_Regular
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hora"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/amarilloPers"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spnHoraEditCitaPeluqueria"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/customborder"
                android:backgroundTint="@color/white"
                android:backgroundTintMode="add"
                android:popupBackground="@color/white" />

            <customfonts.MyTextView_Poppins_Regular
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/servicio"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/amarilloPers"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spnServicioEditCitasPeluqueria"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/customborder"
                android:backgroundTint="@color/white"
                android:backgroundTintMode="add"
                android:popupBackground="@color/white" />

            <customfonts.MyTextView_Poppins_Regular
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@color/azulPers"
                android:text="@string/nombre_del_cliente"
                android:textColor="@color/amarilloPers"
                android:textSize="20sp" />

            <customfonts.EditText_Poppins_Regular
                android:id="@+id/txtNombreEditCitaPeluqueria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@drawable/customborder"
                android:backgroundTint="@color/white"
                android:backgroundTintMode="add"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/azulOpacoPers" />

            <customfonts.MyTextView_Poppins_Regular
                android:id="@+id/txtUsuarioNewCitaPeluqueria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:text="@string/usuario"
                android:textColor="@color/amarilloPers"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spnEmailUsuarioEditCitaPeluqueria"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/customborder"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:popupBackground="@color/white"
                android:textColor="@color/azulOpacoPers" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5sp"
                    android:background="@drawable/customborder"
                    android:onClick="modificarCita"
                    android:text="@string/modificar"
                    android:textColor="@color/azulOpacoPers"
                    app:backgroundTint="@color/white"
                    app:backgroundTintMode="add" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:background="@drawable/customborder"
                    android:onClick="finalizarCita"
                    android:text="@string/finalizar"
                    android:textColor="@color/azulOpacoPers"
                    app:backgroundTint="@color/white"
                    app:backgroundTintMode="add" />

            </LinearLayout>

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5sp"
                android:background="@drawable/customborder"
                android:onClick="borrarCita"
                android:text="@string/borrar"
                app:backgroundTint="@color/RojoCancelar"
                app:backgroundTintMode="add" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>