<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulPers"
    tools:context=".adminPeluqueria.productos.EditProductoActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarAjustes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azulPers">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAjustes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/btnVolver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/azulPers"
                        android:tint="@color/white"
                        app:srcCompat="@drawable/ic_volver" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:background="@color/azulPers"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="26dp"
                android:fontFamily="@font/poppins"
                android:text="@string/editar_producto"
                android:textAllCaps="true"
                android:textColor="@color/amarilloPers"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:layout_marginBottom="26dp"
                android:text="@string/nombre_del_producto"
                android:textColor="@color/amarilloPers"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/txtNombreEditProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@drawable/customborder"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/azulOpacoPers" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/poppins"
                android:text="@string/precio"
                android:textColor="@color/amarilloPers"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/txtPrecioEditProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@drawable/customborder"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins"
                android:ems="10"
                android:inputType="numberSigned"
                android:textColor="@color/azulOpacoPers" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="@string/tipo_de_producto"
                android:fontFamily="@font/poppins"
                android:textColor="@color/amarilloPers"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spnTipoEditProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/customborder"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="textPersonName"
                android:popupBackground="@color/white" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/customborder"
                    android:onClick="modificarProducto"
                    android:text="@string/modificar"
                    android:textColor="@color/azulOpacoPers"
                    app:backgroundTint="@color/white"
                    app:backgroundTintMode="add" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="35dp"
                    android:background="@drawable/customborder"
                    android:onClick="borrarProducto"
                    android:text="@string/borrar"
                    app:backgroundTint="#E91E63"
                    app:backgroundTintMode="add" />
            </TableRow>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>